# HyperSkeleton

./: LICENSE  README.md
Base/: dataStructure.hpp  dataType.hpp  hyperCalc.hpp  mat.hpp  tensor.hpp  timer.hpp
Layers/: fullyConnectedLayer.cpp  layers.hpp
Layers/Include/: layers.hpp
Test/: CMakeLists.txt  main.cpp
